[package]
name = "youdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
rustube = "0.6.0"
youtube_dl = "0.8.1"
tokio = {version = "1.28.2", features = ["rt-multi-thread", "macros"]}
